# trailing

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.yml  openapi.yml
.github/workflows/: ci.yml  release.yml
docs/: competitive-landscape.md  demo-guide.md  known-issues.md  market-sizing.md  regulatory-analysis.md  trailing-subtasks.md  yc-batch-analysis.md  yc-s26-pitch.md
examples/: README.md  claude-code-hook.sh  demo.sh  e2e_test.py
examples/codex-cli/: README.md  trailing_codex.py
examples/crewai/: README.md  trailing_crewai.py
examples/cursor/: README.md  trailing_cursor.py
examples/hooks/: README.md  claude-trailing.sh
examples/langchain/: README.md  trailing_callback.py
examples/langchain-callback/: trailing_callback.py
examples/node-sdk/: README.md  package.json  test_trailing.mjs  trailing.js
examples/openai-agents/: README.md  trailing_openai.py
examples/python-sdk/: README.md  test_trailing.py  trailing.py
migrations/postgres/: 0001_ledger.sql  0002_parity.sql  0003_least_privilege_role.sql  0004_action_log_project_scope.sql  0004_auth_audit.sql
sdk/node/: README.md  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_claude_code_adapter.py  test_cli.py  test_client.py  test_codex_cli_adapter.py  test_crewai_adapter.py  test_cursor_adapter.py  test_langchain_adapter.py  test_models.py  test_openai_agents_adapter.py
sdk/python/trailing/: __init__.py  __main__.py  client.py  models.py  redaction.py  retry.py
sdk/python/trailing/adapters/: __init__.py  _base.py  claude_code.py  codex_cli.py  crewai.py  cursor.py  langchain.py  openai_agents.py
site/: vercel.json
site/public/: dashboard.html  docs.html  index.html  robots.txt  sitemap.xml
src/: action_log.rs  demo.rs  lib.rs  main.rs
src/api/: mod.rs
src/auth/: mod.rs
src/checkpoint/: mod.rs
src/cli/: mod.rs
src/collector/: mod.rs  normalize.rs  otel.rs  sdk.rs
tests/: api_tests.rs  auth_audit_tests.rs  chain_integrity.rs  checkpoint_tests.rs  collector_tests.rs  edge_cases.rs  export_tests.rs  golden_fixture_tests.rs  ingest_helpers_tests.rs  integration_harness.rs  ledger_security_tests.rs  management_tests.rs  migration_tests.rs  oversight_tests.rs  policy_tests.rs  postgres_backend.rs  privacy_redaction_tests.rs  python_langchain_adapter_tests.rs  python_sdk_tests.rs  replay_idempotency_tests.rs  schema_contract_tests.rs  security_regression_tests.rs  sso_tests.rs  tenant_storage.rs
(+48 files in other folders)
