[package]
name = "trailing"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "=0.3.6"
axum = "=0.8.8"
base64 = "=0.22.1"
chrono = { version = "=0.4.44", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "=4.5.41", features = ["derive", "env"] }
ecdsa = { version = "=0.16.9", features = ["der"] }
ed25519-dalek = "=2.2.0"
hex = "=0.4.3"
p256 = { version = "=0.13.2", features = ["ecdsa"] }
rusqlite = { version = "=0.31.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
tokio = { version = "=1.50.0", features = ["full"] }
tokio-postgres = "=0.7.17"
tower-http = { version = "=0.6.8", features = ["cors"] }
toml = "=0.8.23"
uuid = { path = "vendor/uuid" }

[dev-dependencies]
tower = { version = "=0.5.3", features = ["util"] }
