[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trailing"
version = "0.1.0"
description = "Python SDK for the Trailing agent compliance audit platform — tamper-proof audit trails for AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Trailing", email = "hello@trailing.ai" }]
license = "Apache-2.0"
keywords = ["ai", "agents", "compliance", "audit", "llm", "observability", "langchain", "crewai", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
crewai = ["crewai>=0.80"]
langchain = ["langchain-core>=0.2"]
openai = ["openai-agents>=0.0.5"]
claude = []
codex = []
cursor = []
all = ["trailing[claude,codex,crewai,cursor,langchain,openai]"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/trailingai/trailing"
Documentation = "https://github.com/trailingai/trailing"
Repository = "https://github.com/trailingai/trailing"

[project.scripts]
trailing = "trailing.__main__:main"

[tool.setuptools.packages.find]
include = ["trailing*"]
